--- a/template/include/footer.html
+++ b/template/include/footer.html
@@ -2,7 +2,7 @@
 
 
 <!-- ========================= FOOTER ========================= -->
-<footer class="section-footer border-top">
+<footer class="section-footer border-top " style="height:20px">
 	<div class="container">
 		<section class="footer-bottom border-top row">
 			<div class="col-md-2">
