--- a/template/user/cart.html
+++ b/template/user/cart.html
@@ -59,7 +59,7 @@
                                 </div>
                                 <input type="text" class="form-control"  value="{{cart_item.quantity}}">
                                 <div class="input-group-append">
-                                <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+                                <a href="{% url 'add_cart_items' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
                                 </div>
                             </div> <!-- input-group.// -->
                         </div> <!-- col.// -->
