--- a/template/user/search.html
+++ b/template/user/search.html
@@ -117,18 +117,18 @@
             <figure class="card card-product-grid h-100">
                 <div class="img-wrap"> 
                     
-                   <a href="{{product.get_url}}"><img src="{{product.product_image.url}}"></a>
+                   <a href="{{product.productimage_set.first.get_url}}"><img src="{{product.productimage_set.first.product_image.url}}"></a>
                     
                 </div> <!-- img-wrap.// -->
                 <figcaption class="info-wrap">
                     <div class="fix-height">
-                        <a href="{{product.get_url}}" class="title">{{product.product.product_name}}</a>
+                        <a href="{{product.productimage_set.first.get_url}}" class="title">{{product.product_name}}</a>
                         <div class="price-wrap mt-2">
-                            <span class="price">₹{{product.product_size.price}}</span>
+                            <span class="price">₹{{product.productsize_set.first.price}}</span>
                            {% comment %} <del class="price-old">₹1980</del> {% endcomment %}
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="{{product.get_url}}" class="btn btn-block btn-bg-primary">View Details</a>
+                    <a href="{{product.productimage_set.first.get_url}}" class="btn btn-block btn-bg-primary">View Details</a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
@@ -137,7 +137,7 @@
     </div> <!-- row end.// -->
     
     
-    <nav class="mt-4" aria-label="Page navigation sample">
+    {% comment %} <nav class="mt-4" aria-label="Page navigation sample">
       <ul class="pagination">
         <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
         <li class="page-item active"><a class="page-link" href="#">1</a></li>
@@ -145,7 +145,7 @@
         <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item"><a class="page-link" href="#">Next</a></li>
       </ul>
-    </nav>
+    </nav> {% endcomment %}
     
         </main> <!-- col.// -->
     
