--- a/template/user/store.html
+++ b/template/user/store.html
@@ -117,18 +117,18 @@
             <figure class="card card-product-grid h-100">
                 <div class="img-wrap"> 
                     
-                   <a href="{{products.get_url}}"><img src="{{products.product_image.url}}"></a>
+                   <a href="{{products.productimage_set.first.get_url}}"><img src="{{ products.productimage_set.first.product_image.url }}"></a>
                     
                 </div> <!-- img-wrap.// -->
                 <figcaption class="info-wrap">
                     <div class="fix-height">
-                        <a href="{{products.get_url}}" class="title">{{products.product.product_name}}</a>
+                        <a href="{{product.productimage_set.first.get_url}}" class="title">{{products.product_name}}</a>
                         <div class="price-wrap mt-2">
-                            <span class="price">₹{{products.product_size.price}}</span>
+                            <span class="price">₹{{ products.productsize_set.first.price }}</span>
                            {% comment %} <del class="price-old">₹1980</del> {% endcomment %}
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="{{products.get_url}}" class="btn btn-block btn-bg-primary">View Details</a>
+                    <a href="{{product.productimage_set.first.get_url}}" class="btn btn-block btn-bg-primary">View Details</a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
