--- a/template/user/change_password.html
+++ b/template/user/change_password.html
@@ -12,13 +12,13 @@
           <div class="card-body">
           <h4 class="card-title mb-4">Change Password</h4>
           {% include 'include/alerts.html' %}
-          <form action="{% url 'change_password' %}" method="POST">
+          <form action="{% url 'change_password' user.id %}" method="POST">
             {% csrf_token %}
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="New Password" name='password' >
+                <input type="password" class="form-control" placeholder="New Password" name='password' required>
               </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Confirm Password" name='confirm_password' >
+                <input type="password" class="form-control" placeholder="Confirm Password" name='confirm_password' required>
               </div> <!-- form-group// -->
               
               <div class="form-group">
