--- a/template/admin/offers.html
+++ b/template/admin/offers.html
@@ -8,7 +8,7 @@
   <!-- ============================ COMPONENT LOGIN   ================================= -->
   <div class="card mx-auto" style="max-width: 1000px; margin-top: 100px">
     <div class="card-body">
-      <h4 class="card-title mb-4">Coupons</h4>
+      <h4 class="card-title mb-4">Offers</h4>
       {% include 'include/alerts.html' %}
       <table class="table table-sm">
         <thead>
@@ -17,7 +17,6 @@
               <th>Offer Name</th>
               <th>Category</th>    
               <th>Discount Percentage</th>    
-              {% comment %} <th>Products</th>     {% endcomment %}
               <th>Expires On</th>       
               <th>Action</th>     
 
@@ -30,7 +29,6 @@
             <td>{{offer.offer_name}}</td> 
             <td>{{offer.category}}</td>
             <td>{{offer.discount_percentage}}%</td>
-            {% comment %} <td>{{offer.product.product_name}}</td> {% endcomment %}
             <td>{{offer.valid_to}}</td>
             <td><a href="" class="btn btn-danger btn-sm">Delete</button></a>/<a href="" class="btn btn-info btn-sm">Edit</button></a></td>
           </tr>
