--- a/template/user/payment-confirmation.html
+++ b/template/user/payment-confirmation.html
@@ -66,7 +66,6 @@
                     <label class="card-radio-label">
                       <input
                         type="radio"
-                        type="submit"
                         name="pay-method"
                         id="pay-methodoption3"
                         class="card-radio-input"
@@ -85,7 +84,6 @@
                     <label class="card-radio-label card-radio-button-label">
                       <input
                         type="radio"
-                        type="submit"
                         name="pay-method"
                         id="rzp-button1"
                         class="card-radio-input"
@@ -139,7 +137,7 @@
         "order_id": "{{razorpay_payment.id}}", 
         "handler": function (response){
     
-        window.location.href = `http://127.0.0.1:8000/confirmation/?razorpay_payment_id=${response.razorpay_payment_id}&razorpay_order_id=${response.razorpay_order_id}&razorpay_signature=${response.razorpay_signature}`;
+        window.location.href = `http://127.0.0.1:8000/razorpay_payment/?razorpay_payment_id=${response.razorpay_payment_id}&razorpay_order_id=${response.razorpay_order_id}&razorpay_signature=${response.razorpay_signature}`;
     
            
         },
