Stock problem solved

--- a/template/user/store.html
+++ b/template/user/store.html
@@ -112,6 +112,7 @@
     </header><!-- sect-heading -->
     
     <div class="row">
+        {% include "include/alerts.html" %}
         {% for products in product  %}
         <div class="col-md-4">
             <figure class="card card-product-grid h-70 ">
